@@ -94,6 +94,9 @@ New in spot 2.5.2 (2018-03-25)
   - Using spot.automata("cmd...|") to read just a few automata out of
     an infinite stream would not properly terminate the command.
 
+  - The is_unambiguous() check (rewritten in Spot 2.2) could mark some
+    unambiguous automata as ambiguous.
+
   - acc_cond::is_generalized_rabin() and
     acc_cond::is_generalized_streett() would segfault on weird
     acceptance conditions such as "3 t" or "3 f".
